fixed some perspective bugs on safari

--- a/src/components/card.module.css
+++ b/src/components/card.module.css
@@ -24,7 +24,7 @@
   background: var(--color-pink);
   height: 460px;  
   border-radius: 32px;
-  transition: all 300ms ease-out;
+  /* transition: all 300ms ease-out; */
   display: flex;
   align-content: center;
   justify-content: center;
